# PyOpenJt

./: Setup.bat
JTAssistant/src/JTData/: JTData_SceneGraph.cxx
JtTools/: CMakeLists.txt
JtTools/src/: JtDump_Main.cpp
Python/: CMakeLists.txt  JtFileObject.cpp  PyOpenJt.cpp
Scripts/: TestPythonBinding.py
Server/: GeoServer.py  Readme.md  httpd.conf
TKJT/src/JtData/: JtData_Message.hxx  JtData_Model.cxx  JtData_Model.hxx  JtData_Object.cxx
TKJT/src/JtElement/: JtElement_MetaData_PMIManager.cxx  JtElement_ProxyMetaData.cxx
TKJT/src/JtProperty/: JtProperty_LateLoaded.hxx
ToolsLib/: CMakeLists.txt
ToolsLib/src/: JtData2Json.cpp  JtData2Json.h  JtGltfMesh.cpp  JtGltfMesh.h  JtUtils.cpp  JtUtils.h
